--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 
 <p>Oleg was here  &#128540;</p>
 <p>Sax was 'ere   &#128526;</p>
+   
+  <footer>I'm going to take over Saxs GitHub &#128520;</footer>
+  
 </body>
 </html>
