--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <h1>Welcome to my website.</h1>
 <p>I hope you like it!</p>
+<p><a href="form.html">Online Form</a></p>
 
 <p>Oleg was here  &#128540;</p>
 <p>Sax was 'ere   &#128526;</p>
