--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
 
 <h2>Using Radio Buttons on a Form</h2>
 
-<p>Choose your favorite Web language:</p>
+<p>Choose your favorite Web language on the form below:</p>
 
 <form>
   <input type="radio" id="html" name="fav_language" value="HTML">
