--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 sudo yum install -y httpd
  
 # Clone HTML repository from GitHub
-git clone https://github.com/Phoenix-Game/htmlsax.git
+git clone https://github.com/Phoenix-Game/htmlsax.git /root/
  
 # Move HTML files to Apache server directory
-sudo cp -r your-html-repo/* /var/www/html/
+sudo cp -r /root/htmlsax/* /var/www/html/
  
 # Start httpd service
 sudo systemctl start httpd
@@ -58,14 +58,11 @@ sudo systemctl start docker
 # Install Docker Compose
 sudo yum install -y docker-compose
  
-# Create directory for httpd and git
-sudo mkdir -p /home/$USER/httpd
- 
 # Clone HTML repository from GitHub
-git clone https://github.com/Phoenix-Game/htmlsax.git /home/$USER/httpd
+git clone https://github.com/Phoenix-Game/htmlsax.git /root/htmlsax/
  
 # Change to the httpd directory
-cd /home/$USER/httpd
+cd /root/htmlsax/
  
 # Create docker-compose.yml
 echo 'version: "3"
@@ -73,7 +70,7 @@ services:
   httpd:
     image: httpd:latest
     volumes:
-      - ./html:/usr/local/apache2/htdocs
+      - /root/htmlsax/:/usr/local/apache2/htdocs
     ports:
       - "80:80"' >docker-compose.yml
  
