--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
     <code>
 #!/bin/bash
  
-# Install httpd
-sudo yum install -y httpd
+# Install httpd and git
+yum install -y httpd git
  
 # Clone HTML repository from GitHub
 git clone https://github.com/Phoenix-Game/htmlsax.git /root/
  
 # Move HTML files to Apache server directory
-sudo cp -r /root/htmlsax/* /var/www/html/
+cp -r /root/htmlsax/* /var/www/html/
  
 # Start httpd service
-sudo systemctl start httpd
+systemctl start httpd
  
 # Enable httpd to start on boot
-sudo systemctl enable httpd
+systemctl enable httpd
     </code>
   </pre>
  
@@ -49,14 +49,14 @@ sudo systemctl enable httpd
     <code>
 #!/bin/bash
  
-# Install Docker
-sudo yum install -y docker
+# Install Docker and git
+yum install -y docker git
  
 # Start Docker service
-sudo systemctl start docker
+systemctl start docker
  
 # Install Docker Compose
-sudo yum install -y docker-compose
+yum install -y docker-compose
  
 # Clone HTML repository from GitHub
 git clone https://github.com/Phoenix-Game/htmlsax.git /root/htmlsax/
@@ -75,7 +75,7 @@ services:
       - "80:80"' >docker-compose.yml
  
 # Run httpd in Docker
-sudo docker-compose up -d
+docker-compose up -d
     </code>
   </pre>
   
