--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@ yum install -y docker git
 systemctl start docker
  
 # Install Docker Compose
-yum install -y docker-compose
+curl -L https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m) -o /usr/local/bin/docker-compose
+chmod +x /usr/local/bin/docker-compose
  
 # Clone HTML repository from GitHub
 git clone https://github.com/Phoenix-Game/htmlsax.git /root/htmlsax/
