--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 yum install -y httpd git
  
 # Clone HTML repository from GitHub
-git clone https://github.com/Phoenix-Game/htmlsax.git /root/htmlsax
+git clone https://github.com/saxtonator/html.git /root/htmlsax
  
 # Move HTML files to Apache server directory
 cp -r /root/htmlsax/* /var/www/html/
@@ -60,7 +60,7 @@ curl -L https://github.com/docker/compose/releases/latest/download/docker-compos
 chmod +x /usr/local/bin/docker-compose
  
 # Clone HTML repository from GitHub
-git clone https://github.com/Phoenix-Game/htmlsax.git /root/htmlsax/
+git clone https://github.com/saxtonator/html.git /root/htmlsax/
  
 # Create docker-compose.yml
 echo 'version: "3"
