--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@ services:
     image: oznu/cloudflare-ddns:latest
     restart: always
     environment:
-      - API_KEY=48GvKZKBWUuWyaQ5InoZO-1ysvb3jbXV0fJHwFZA
-      - ZONE=phoenixgame.co.uk
-      - SUBDOMAIN=test
+      - API_KEY=******
+      - ZONE=example.com
+      - SUBDOMAIN=subdomain
       - PROXIED=true' >/root/cloudflare/docker-compose.yml
 
 # Run cloudflare DDnS in Docker
