--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 #!/bin/bash
  
 # Install httpd and git
-yum install -y httpd git
+yum install -y httpd git dnsutils jq curl
  
 # Clone HTML repository from GitHub
 git clone https://github.com/saxtonator/html.git /root/htmlsax
@@ -39,6 +39,25 @@ systemctl start httpd
  
 # Enable httpd to start on boot
 systemctl enable httpd
+
+# Create /root/cloudflare direcotory and move ddns.sh script into it
+mkdir /root/cloudflare
+mv /root/htmlsax/ddns.sh /root/cloudflare
+
+# Change ddns.sh script in /root/cloudflare
+sed 's/dont_touch_dnsrecord/DNS_RECORD_HERE/g' /root/cloudflare/ddns.sh > /root/cloudflare/ddns1.sh
+sed 's/dont_touch_zoneid/ZONEID_RECORD_HERE/g' /root/cloudflare/ddns1.sh > /root/cloudflare/ddns2.sh
+sed 's/dont_touch_api/API_KEY_HERE/g' /root/cloudflare/ddns2.sh > /root/cloudflare/ddns.sh
+      
+# create new cron file
+echo '*/5	*	*	*	* bash /root/cloudflare/ddns.sh' >> /root/mycron
+# install new cron file
+crontab /root/mycron
+# remove crontab file
+rm /root/mycron
+#run bash script
+bash ddns.sh
+      
     </code>
   </pre>
  
