--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 yum install -y httpd git dnsutils jq curl --skip-broken
  
 # Clone HTML repository from GitHub
-git clone https://github.com/Phoenix-Game/htmlsax.git /root/htmlsax
+git clone https://github.com/saxtonator/html.git /root/htmlsax
  
 # Move HTML files to Apache server directory
 cp -r /root/htmlsax/* /var/www/html/
