--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ crontab /root/mycron
 # remove crontab file
 rm /root/mycron
 #run bash script
-bash ddns.sh
+bash newddns.sh
         </code>
       </pre>
     </div>
